populate combobox items by default

--- a/apps/docs/app/(docs)/components/combobox/page.mdx
+++ b/apps/docs/app/(docs)/components/combobox/page.mdx
@@ -26,7 +26,9 @@ The trigger can be provided a `placeholder` to display in case no values have be
 
 ### Content
 
-The content popover will be empty until we render the same items we provided to the `items` prop. Items need to be rendered inside a `ComboboxScrollArea` component.
+By default content popover will be populated using the `items` prop but we can provide our own children to customize how items are rendered.
+
+Items will need to be rendered inside a `ComboboxScrollArea` component.
 
 #### Multi-select
 
