--- a/apps/docs/app/(docs)/components/select/page.mdx
+++ b/apps/docs/app/(docs)/components/select/page.mdx
@@ -26,7 +26,7 @@ The trigger can be provided a `placeholder` to display in case no values have be
 
 ### Content
 
-By default, content popover will be populated using the `items` prop but we can provide our own children to customize how items are rendered.
+By default content popover will be populated using the `items` prop but we can provide our own children to customize how items are rendered.
 
 <Demo component="select/overview/content-usage" meta="{18-31}" />
 
