--- a/apps/docs/app/(docs)/components/combobox/page.mdx
+++ b/apps/docs/app/(docs)/components/combobox/page.mdx
@@ -12,7 +12,7 @@ Multi-purpose combobox widget to allow selection from a dynamic set of options.
 
 ### Structure
 
-Combobox works with lists of items provided via the `items` prop. The basic structure includes the main component provider, a trigger, and a content.
+Combobox works with lists of items provided via the `defaultItems` prop. The basic structure includes the main component provider, a trigger, and a content.
 
 - `Combobox`
 - `ComboboxTrigger`
@@ -24,56 +24,70 @@ The trigger can be provided a `placeholder` to display in case no values have be
 
 <Demo component="combobox/overview/usage" />
 
+The `ComboboxContent` component further includes the input, a listbox, and an empty section.
+
+- `ComboboxInput`
+- `ComboboxScrollArea`
+- `ComboboxEmpty`
+
+We'll talk about them more in the following sections.
+
 ### Content
 
-By default content popover will be populated using the `items` prop but we can provide our own children to customize how items are rendered.
+By default content popover will render an input and the provided items. But we can customize how items are rendered using the `ComboboxScrollArea` component.
 
-Items will need to be rendered inside a `ComboboxScrollArea` component.
+`ComboboxScrollArea` accepts a react node as well as a render prop where the first parameter is the item that needs to be rendered.
 
-#### Multi-select
-
-We can render multi-select items using `ComboboxCheckboxItem`.
-
-<Demo component="combobox/overview/content-checkbox-usage" meta="{18-24}" />
+<Demo component="combobox/overview/content-usage" meta="{15}" />
 
 #### Single-select
 
 We can render single-select items using `ComboboxRadioItem`.
 
-<Demo component="combobox/overview/content-radio-usage" meta="{20,22}" />
+<Demo component="combobox/overview/content-radio-usage" meta="{19}" />
+
+#### Multi-select
+
+We can render multi-select items using `ComboboxCheckboxItem`.
+
+<Demo component="combobox/overview/content-checkbox-usage" meta="{19-21}" />
 
 ### Input
 
-Notice that keyboard interactions inside the content popover do not work in the previous demos. This is because we need to render the `ComboboxInput` component that handles keyboard interaction and also filtering of visible items.
+Notice that keyboard interactions inside the content popover do not work in the previous demos. This is because we need to render the `ComboboxInput` component that handles keyboard interaction and triggers filtering of visible items.
 
-Additionally we need to add an `onInputValueChange` prop to the main `Combobox` component to manually handle the actual filtering of items.
+<Demo component="combobox/overview/input-usage" meta="{16}" />
 
-<Demo component="combobox/overview/input-usage" meta="{16,21-27,31}" />
+#### Filtering
 
-How you store the items and handle filtering is up to you. In this demo we've stored the items in a state and update the state in the `onInputValueChange` handler. Alternatively you could store the input value in a state and filter the items based on that on each render.
+Combobox automatically handles filtering items when using the `defaultItems` prop. But if we need manual control we can use `items` prop instead along with `onInputValueChange`.
+
+<Demo component="combobox/overview/input-controlled-usage" meta="{17-26}" />
+
+How you store the items and handle filtering is up to you. In the previous demo we've stored the items in a state and update the state in the `onInputValueChange` handler. Alternatively you could store the input value in a state and filter the items based on that on each render.
 
 <Demo
-  component="combobox/overview/input-controlled-usage"
-  meta="{16-19,23,25}"
+  component="combobox/overview/input-controlled-input-usage"
+  meta="{13-18,22}"
 />
 
 ### Selection
 
 Pressing enter or clicking items will not do anything in previous demos. For that we need to add the `isItemSelected` and `onItemSelect` props to the main `Combobox` component.
 
-#### Multi-select
-
-<Demo component="combobox/overview/value-checkbox-usage" meta="{17,29-36}" />
-
 #### Single-select
 
-<Demo component="combobox/overview/value-radio-usage" meta="{17,29-32}" />
+<Demo component="combobox/overview/value-radio-usage" meta="{13,18-21}" />
+
+#### Multi-select
+
+<Demo component="combobox/overview/value-checkbox-usage" meta="{16,21-28}" />
 
 ### Empty
 
-Finally we can render an empty state in the content using the `ComboboxEmpty` component.
+Finally we can render an empty state in the content using the `ComboboxEmpty` component. And you also have to use the `items` prop when manually rendering the empty state.
 
-<Demo component="combobox/overview/empty-usage" meta="{39}" />
+<Demo component="combobox/overview/empty-usage" meta="{35}" />
 
 ## Documentation
 
@@ -115,10 +129,10 @@ export default () => (
           <ComboboxRadioItem />
         </ComboboxGroup>
 
-        <ComboboxEmpty />
         <ComboboxSeparator />
       </ComboboxScrollArea>
 
+      <ComboboxEmpty />
       <ComboboxFooter />
     </ComboboxContent>
   </Combobox>
@@ -127,11 +141,11 @@ export default () => (
 
 ### Data
 
-Use the `items` prop to pass the collection of data to `Combobox`. Items can be an array of primitive types such as strings or it can be an array of objects.
+Use the `defaultItems` or `items` prop to pass the collection of data to `Combobox`. Items can be an array of primitive types such as strings or it can be an array of objects.
 
 In case item is an object you need to pass an additional `itemToLabel` prop for `Combobox` to work.
 
-<Demo component="combobox/complex-usage" meta={{ "App.tsx": "{24}" }} />
+<Demo component="combobox/complex-usage" meta={{ "App.tsx": "{26}" }} />
 
 ### Filtering
 
@@ -139,9 +153,9 @@ Use the `onInputValueChange` handler to handle filtering your list of items as t
 
 <Demo component="combobox/complex-usage" meta={{ "App.tsx": "{25-33}" }} />
 
-### Controlled
+### Selection
 
-We can only use `Combobox` in a controlled mode and using the following props:
+We can only specify `Combobox` selection in a controlled mode and using the following props:
 
 - `isItemSelected`: Return true if an item should be marked as selected where the item and the index are passed as parameters.
 - `onItemSelect`: Handler invoked when user selects an item with the item as the only parameter.
@@ -150,7 +164,7 @@ Developers are expected to manually track the selection on their side since item
 
 <Demo
   component="combobox/controlled-usage"
-  meta={{ "App.tsx": "{18,33-34}" }}
+  meta={{ "App.tsx": "{16,21,23}" }}
 />
 
 ### Disabled
@@ -192,9 +206,9 @@ Use the `loading` prop on `ComboboxScrollArea` to show a loading spinner if the 
 
 ### Virtualized
 
-We can use virtualization to improve performance when rendering a large number of items inside the combobox. Change `children` to a render prop to enable virtualization.
+We can use virtualization to improve performance when rendering a large number of items inside the combobox. Inside `ComboboxScrollArea` set `children` to a render prop to enable virtualization.
 
-<Demo component="combobox/virtualized-usage" meta="{47-51}" />
+<Demo component="combobox/virtualized-usage" meta="{49-51}" />
 
 ### Related
 
