fix tailwind layers docs for ssr
by including optiaxiom as first layer always

--- a/apps/docs/app/(docs)/guides/css-layers/page.mdx
+++ b/apps/docs/app/(docs)/guides/css-layers/page.mdx
@@ -35,7 +35,7 @@ Place your Tailwind base directive inside the `optiaxiom.base` layer to prevent 
 #### Tailwind CSS 4.0
 
 ```css {3}
-@layer theme, components, utilities;
+@layer optiaxiom, theme, components, utilities;
 @import "tailwindcss/theme.css" layer(theme);
 @import "tailwindcss/preflight.css" layer(optiaxiom.base);
 @import "tailwindcss/utilities.css" layer(utilities);
