fix loading state by moving prop to CommandListbox component
since that component decides whether to show loading/data/empty state

--- a/apps/docs/app/(docs)/components/combobox/page.mdx
+++ b/apps/docs/app/(docs)/components/combobox/page.mdx
@@ -70,7 +70,9 @@ This example shows using `defaultFilter` to provide a custom filter function:
 
 We can also manually control `items` in combination with the `onInputValueChange` prop to load items as the user types.
 
-<Demo component="combobox/overview/input-controlled-usage" meta="{26-27}" />
+And we can toggle the `loading` prop on `ComboboxListbox` to show a loading spinner while the data is loading (an empty state will be shown otherwise).
+
+<Demo component="combobox/overview/input-controlled-usage" meta="{26-27,32}" />
 
 ### Selection
 
