--- a/apps/docs/app/(docs)/components/combobox/page.mdx
+++ b/apps/docs/app/(docs)/components/combobox/page.mdx
@@ -20,9 +20,7 @@ Combobox works with lists of items provided via the `defaultItems` prop. The bas
 
 Items can be an array of strings or it can be an array of objects.
 
-The trigger can be provided a `placeholder` to display in case no values have been selected yet.
-
-<Demo component="combobox/overview/usage" />
+<Demo component="combobox/basic-usage" />
 
 The `ComboboxContent` component further includes the input, a listbox, and a footer.
 
@@ -38,25 +36,25 @@ By default content popover will render an input and the provided items. But we c
 
 `ComboboxListbox` accepts a react node as well as a render prop where the first parameter is the item that needs to be rendered.
 
-<Demo component="combobox/overview/content-usage" meta="{15}" />
+<Demo component="combobox/content-usage" meta="{15}" />
 
 #### Single-select
 
 We can render single-select items using `ComboboxRadioItem`.
 
-<Demo component="combobox/overview/content-radio-usage" meta="{19}" />
+<Demo component="combobox/content-radio-usage" meta="{19}" />
 
 #### Multi-select
 
 We can render multi-select items using `ComboboxCheckboxItem`.
 
-<Demo component="combobox/overview/content-checkbox-usage" meta="{19-21}" />
+<Demo component="combobox/content-checkbox-usage" meta="{19-21}" />
 
 ### Input
 
 Notice that keyboard interactions inside the content popover do not work in the previous demos. This is because we need to render the `ComboboxInput` component that handles keyboard interaction and triggers filtering of visible items.
 
-<Demo component="combobox/overview/input-usage" meta="{16}" />
+<Demo component="combobox/input-usage" meta="{16}" />
 
 #### Filtering
 
@@ -64,7 +62,7 @@ Combobox automatically handles filtering when using the `defaultItems` prop usin
 
 This example shows using `defaultFilter` to provide a custom filter function:
 
-<Demo component="combobox/overview/input-filter-usage" meta="{14-16}" />
+<Demo component="combobox/input-filter-usage" meta="{14-16}" />
 
 #### Async loading
 
@@ -72,7 +70,7 @@ We can also manually control `items` in combination with the `onInputValueChange
 
 And we can toggle the `loading` prop on `ComboboxListbox` to show a loading spinner while the data is loading (an empty state will be shown otherwise).
 
-<Demo component="combobox/overview/input-controlled-usage" meta="{26-27,32}" />
+<Demo component="combobox/input-controlled-usage" meta="{26-27,32}" />
 
 ### Selection
 
@@ -85,17 +83,17 @@ Developers are expected to manually track the selection on their side since item
 
 #### Single-select
 
-<Demo component="combobox/overview/value-radio-usage" meta="{13,18-21}" />
+<Demo component="combobox/value-radio-usage" meta="{13,18-21}" />
 
 #### Multi-select
 
-<Demo component="combobox/overview/value-checkbox-usage" meta="{16,21-28}" />
+<Demo component="combobox/value-checkbox-usage" meta="{16,21-28}" />
 
 ### Empty
 
 By default combobox will display a generic empty content message if no results are found matching your query. We can customize this empty message by setting the `empty` prop on `ComboboxListbox`.
 
-<Demo component="combobox/overview/empty-usage" meta="{41-43}" />
+<Demo component="combobox/empty-usage" meta="{41-43}" />
 
 ## Documentation
 
@@ -145,22 +143,13 @@ export default () => (
 );
 ```
 
-### Object data
+### Complex data
 
 Use the `defaultItems` or `items` prop to pass the collection of data to `Combobox`. Items can be an array of primitive types such as strings or it can be an array of objects.
 
-In case item is an object you need to pass an additional `itemToLabel` prop for `Combobox` to work.
+In case item is an object you need to pass an additional `itemToLabel` prop for `Combobox` to work. By default items will be rendered using this label, but we can override that by manually rendering our own custom `ComboboxListbox`.
 
-<Demo component="combobox/complex-usage" meta={{ "App.tsx": "{24}" }} />
-
-### Disabled
-
-Use the optional `isItemDisabled` prop to configure which items should be disabled. The callback is passed the item and the index number as arguments and expects a boolean result.
-
-<Demo
-  component="combobox/complex-usage"
-  meta={{ "App.tsx": "{22}", "data.ts": "{5}" }}
-/>
+<Demo component="combobox/complex-usage" meta={{ "App.tsx": "{19}" }} />
 
 ### Creatable
 
@@ -176,7 +165,7 @@ By default we use the `Button` component for the combobox trigger which accepts 
 
 The `ComboboxCheckboxItem` and `ComboboxRadioItem` components accepts `icon`, `addonBefore`, `addonAfter`, and `description` props for additional content inside the items.
 
-<Demo component="combobox/complex-usage" meta={{ "App.tsx": "{39-44}" }} />
+<Demo component="combobox/addon-usage" meta={{ "App.tsx": "{38-43}" }} />
 
 ### Virtualized
 
