--- a/apps/docs/app/(docs)/guides/page.mdx
+++ b/apps/docs/app/(docs)/guides/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Callout, Steps } from "nextra/components";
+import { Steps } from "nextra/components";
 
 # Getting Started
 
