update theme import path from @optiaxiom/react to @optiaxiom/globals

--- a/apps/docs/app/(docs)/guides/react-select/page.mdx
+++ b/apps/docs/app/(docs)/guides/react-select/page.mdx
@@ -34,7 +34,7 @@ When using `react-select` inside a `Dialog` we need to use portals to ensure the
 3. Finally set the `zIndex` of the `MenuPortal` to our popover token to ensure the menu is visible on top of our dialog.
 
    ```jsx
-   import { theme } from "@optiaxiom/react";
+   import { theme } from "@optiaxiom/globals";
 
    <Select
      styles={{
