--- a/apps/docs/app/(docs)/styling/colors/page.mdx
+++ b/apps/docs/app/(docs)/styling/colors/page.mdx
@@ -1,4 +1,4 @@
-import { theme } from "@optiaxiom/react";
+import { theme } from "@optiaxiom/globals";
 import { Demo } from "@/components/demo";
 import { Scale } from "@/components/scale";
 
