--- a/apps/docs/app/(docs)/styling/design-tokens/page.mdx
+++ b/apps/docs/app/(docs)/styling/design-tokens/page.mdx
@@ -1,6 +1,6 @@
 import { Scale } from "@/components/scale";
 import { Demo } from "@/components/demo";
-import { theme } from "@optiaxiom/react";
+import { theme } from "@optiaxiom/globals";
 
 # Design Tokens
 
@@ -39,7 +39,7 @@ The following css custom properties will be available:
 And they can be accessed via the `theme` object:
 
 ```ts
-import { theme } from "@optiaxiom/react";
+import { theme } from "@optiaxiom/globals";
 
 console.log(theme.colors["bg.accent"] === "var(--ax-colors-bg-accent)"); // true
 console.log(theme.colors["fg.success"] === "var(--ax-colors-fg-success)"); // true
