add nested submenu docs and stories
lift state up to Menu from command for active submenu - and show submenu using
dropdown in small size and as a new set of options in dialog/large size

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -95,6 +95,12 @@ We can add the `addon` and `description` properties to show additional content i
 
 <Demo component="menu/addon-usage" meta={{ "App.tsx": "{38-43}" }} />
 
+### Submenus
+
+Use `subOptions` property to render submenus.
+
+<Demo component="menu/nested-usage" meta="{21-30}" />
+
 ### Virtualized
 
 Menu automatically uses virtualization to improve performance when rendering a large number of items.
