ability to render menu items as links

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -95,6 +95,12 @@ We can add the `addon` and `description` properties to show additional content i
 
 <Demo component="menu/addon-usage" meta={{ "App.tsx": "{38-43}" }} />
 
+### Links
+
+Add the `link` property to options to render them as links.
+
+<Demo component="menu/link-usage" meta="{14}" />
+
 ### Submenus
 
 Use `subOptions` property to render submenus.
